--- a/configuration/templates/volunteering/admin-group.hbs
+++ b/configuration/templates/volunteering/admin-group.hbs
@@ -279,7 +279,7 @@
                     <div class="popover-container">
                       <div class="card">
                         <div class="card-body caption">
-                          Please list participants with each full name on a new line
+                          Please list participants with each full name on a new line or separated with commas
                         </div>
                       </div>
                     </div>
