--- a/src/main.scss
+++ b/src/main.scss
@@ -12,8 +12,8 @@ $bg-color-dark: darken($bg-color, 4%) !default;
 $dark-color: #10183A;
 $gray-color: #333E48;
 $light-color: #FFFFFF;
-$success-color: #3BAA34;
-$warning-color: #F05B23;
+$success-color: #AACB2D;
+$warning-color: #EB8918;
 $error-color: #f03823;
 
 $theme-challenge: $primary-color;
