--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -51,7 +51,7 @@
     </div>
   </div>
   <div class="columns">
-    <div class="column col-6 col-lg-12">
+    <div class="column col-6 col-lg-8 col-md-12 col-mx-auto">
       <h2>
         Aged 12-25 and volunteer?
       </h2>
@@ -74,7 +74,7 @@
         </div>
       </div>
     </div>
-    <div class="column col-6 col-lg-12">
+    {{!-- <div class="column col-6 col-lg-12">
       <h3 class="t-margin">
         Group administrator?
       </h3>
@@ -90,5 +90,6 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> --}}
+  </div>
 </div>
