--- a/configuration/templates/account/auth/sign-up-details.hbs
+++ b/configuration/templates/account/auth/sign-up-details.hbs
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Add your details</h2>
+  {{!-- <h2>Add your details</h2> --}}
 
   <h3 class="b-margin-full">
     {{#unless @root.request.params.query.redirect ~}}
