--- a/configuration/templates/volunteering/certificate/object-body-admin.hbs
+++ b/configuration/templates/volunteering/certificate/object-body-admin.hbs
@@ -2,67 +2,71 @@
   {{#if @root.request.params.award_id ~}}
     {{#json type='array' ~}}
       {{#each (filter awards_list "award_id" "===" @root.request.params.award_id) ~}}
-        {{#json ~}}
-          {{{json key='type' value=award_type}}},
-          {{#json key='user' ~}}
-            {{{json key='first_name' value=recipient_first_name}}},
-            {{{json key='last_name' value=recipient_last_name}}},
-            {{#compare award_level_numerical_value ">" 0 ~}}
-              {{{json key='certificate_type' value="hours"}}},
-              {{{json key='hours_verified' value=award_level_numerical_value}}}
-            {{else}}
-              {{{json key='certificate_type' value=award_level}}},
-              {{{json key='hours_verified' value=0}}}
-            {{/compare ~}}
-          {{/json ~}},
-          {{{json key='award_level' value=award_level}}},
-          {{{json key='organisation_name_1' value=organisation_name_1}}},
-          {{{json key='role_1' value=role_1}}},
-          {{{json key='testimonial_1' value=testimonial_1}}},
-          {{{json key='organisation_name_2' value=organisation_name_2}}},
-          {{{json key='role_2' value=role_2}}},
-          {{{json key='testimonial_2' value=testimonial_2}}},
-          {{{json key='organisation_name_3' value=organisation_name_3}}},
-          {{{json key='role_3' value=role_3}}},
-          {{{json key='testimonial_3' value=testimonial_3}}},
-          {{{json key='sdgs' value=un_sustainable_development_goals}}},
-          {{{json key='claim_code' value=claim_code}}},
-          {{{json key='group_award_claimed' value=group_award_claimed}}},
-          {{{json key='extra_organisations' value=extra_organisations}}}
-        {{/json ~}}
+        {{#if recipient_first_name ~}}
+          {{#json ~}}
+            {{{json key='type' value=award_type}}},
+            {{#json key='user' ~}}
+              {{{json key='first_name' value=recipient_first_name}}},
+              {{{json key='last_name' value=recipient_last_name}}},
+              {{#compare award_level_numerical_value ">" 0 ~}}
+                {{{json key='certificate_type' value="hours"}}},
+                {{{json key='hours_verified' value=award_level_numerical_value}}}
+              {{else}}
+                {{{json key='certificate_type' value=award_level}}},
+                {{{json key='hours_verified' value=0}}}
+              {{/compare ~}}
+            {{/json ~}},
+            {{{json key='award_level' value=award_level}}},
+            {{{json key='organisation_name_1' value=organisation_name_1}}},
+            {{{json key='role_1' value=role_1}}},
+            {{{json key='testimonial_1' value=testimonial_1}}},
+            {{{json key='organisation_name_2' value=organisation_name_2}}},
+            {{{json key='role_2' value=role_2}}},
+            {{{json key='testimonial_2' value=testimonial_2}}},
+            {{{json key='organisation_name_3' value=organisation_name_3}}},
+            {{{json key='role_3' value=role_3}}},
+            {{{json key='testimonial_3' value=testimonial_3}}},
+            {{{json key='sdgs' value=un_sustainable_development_goals}}},
+            {{{json key='claim_code' value=claim_code}}},
+            {{{json key='group_award_claimed' value=group_award_claimed}}},
+            {{{json key='extra_organisations' value=extra_organisations}}}
+          {{/json ~}}
+        {{/if ~}}
       {{/each ~}}
     {{/json ~}}
   {{else}}
-  {{#json type='array' ~}}
-    {{#each awards_list ~}}
-        {{#json ~}}
-          {{{json key='type' value=award_type}}},
-          {{#json key='user' ~}}
-            {{{json key='first_name' value=recipient_first_name}}},
-            {{{json key='last_name' value=recipient_last_name}}},
-            {{#compare award_level_numerical_value ">" 0 ~}}
-            {{{json key='certificate_type' value="hours"}}},
-            {{{json key='hours_verified' value=award_level_numerical_value}}}
-            {{else}}
-            {{{json key='certificate_type' value=award_level}}},
-            {{{json key='hours_verified' value=0}}}
-            {{/compare ~}}
-          {{/json ~}},
-          {{{json key='award_level' value=award_level}}},
-          {{{json key='organisation_name_1' value=organisation_name_1}}},
-          {{{json key='role_1' value=role_1}}},
-          {{{json key='testimonial_1' value=testimonial_1}}},
-          {{{json key='organisation_name_2' value=organisation_name_2}}},
-          {{{json key='role_2' value=role_2}}},
-          {{{json key='testimonial_2' value=testimonial_2}}},
-          {{{json key='organisation_name_3' value=organisation_name_3}}},
-          {{{json key='role_3' value=role_3}}},
-          {{{json key='testimonial_3' value=testimonial_3}}},
-          {{{json key='sdgs' value=un_sustainable_development_goals}}},
-          {{{json key='claim_code' value=claim_code}}},
-          {{{json key='group_award_claimed' value=group_award_claimed}}},
-          {{{json key='extra_organisations' value=extra_organisations}}}
-        {{/json ~}}{{#unless @last}},{{/unless}}
+    {{#json type='array' ~}}
+      {{#each awards_list ~}}
+        {{#if recipient_first_name ~}}
+          {{#json ~}}
+            {{{json key='type' value=award_type}}},
+            {{#json key='user' ~}}
+              {{{json key='first_name' value=recipient_first_name}}},
+              {{{json key='last_name' value=recipient_last_name}}},
+              {{#compare award_level_numerical_value ">" 0 ~}}
+              {{{json key='certificate_type' value="hours"}}},
+              {{{json key='hours_verified' value=award_level_numerical_value}}}
+              {{else}}
+              {{{json key='certificate_type' value=award_level}}},
+              {{{json key='hours_verified' value=0}}}
+              {{/compare ~}}
+            {{/json ~}},
+            {{{json key='award_level' value=award_level}}},
+            {{{json key='organisation_name_1' value=organisation_name_1}}},
+            {{{json key='role_1' value=role_1}}},
+            {{{json key='testimonial_1' value=testimonial_1}}},
+            {{{json key='organisation_name_2' value=organisation_name_2}}},
+            {{{json key='role_2' value=role_2}}},
+            {{{json key='testimonial_2' value=testimonial_2}}},
+            {{{json key='organisation_name_3' value=organisation_name_3}}},
+            {{{json key='role_3' value=role_3}}},
+            {{{json key='testimonial_3' value=testimonial_3}}},
+            {{{json key='sdgs' value=un_sustainable_development_goals}}},
+            {{{json key='claim_code' value=claim_code}}},
+            {{{json key='group_award_claimed' value=group_award_claimed}}},
+            {{{json key='extra_organisations' value=extra_organisations}}}
+          {{/json ~}}{{#unless @last}},{{/unless}}
+        {{/if ~}}
       {{/each ~}}
     {{/json ~}}
   {{/if ~}}
