--- a/configuration/templates/pages/home-not-authenticated.hbs
+++ b/configuration/templates/pages/home-not-authenticated.hbs
@@ -58,9 +58,9 @@
       <p class="b-margin-full">
         {{@root.context.metaData.fullTitle}} are the Scottish Government's way of celebrating, recognising and rewarding the commitment, contribution and achievements of young volunteers in Scotland.
       </p>
-      {{!-- <h3 class="t-margin">
-        Volunteer?
-      </h3> --}}
+      {{!-- <p class="b-margin-full">
+        Do you have a <strong>claim code</strong> from an existing certificate? Sign up now to add it to your account.
+      </p> --}}
       <div class="my-saltire columns b-margin-full">
         <div class="column col-12 col-mx-auto">
           <div class="columns">
